syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/hyle-team/tss-svc/resources";

message Deposit {
  string tx_hash = 1;
  int64 tx_event_index = 2;
  string chain_id = 3;
}